[workspace]

resolver = "2"

members = [
    "crates/*",
    "web",
]

[workspace.dependencies]
anyhow = "1"
axum = "0.8.1"
openssl = "0.10.71"
openssl-probe = "0.1.6"
reqwest = "0.12.12"
samael = { version = "0.0.18", features = ["xmlsec"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }